|         - AWStats:                                              |
|               * apache: check if stats are working with FastCGI |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-07-15 Benedikt Heintel
	- GUI:
		* Fixed #457: Add max-attempts limit for lost password's CAPTCHA
		* Fixed #481: Error after Login

2007-07-13 Benedikt Heintel
	- GUI:
		* Updated: Squirrelmail to 1.4.10a
		* Fixed #479: username input field is too short

2007-07-13 Raphael Geissert
	- LANGUAGES
		* Updated ispCP.pot catalogue
		* Updated translations to latest catalogue
	- DOCS
		* Added information about the GUI images
	- GUI:
		* Fixed #473: The "Choose directory" function does not work

2007-07-13 Benedikt Heintel
	- GUI:
		* Fixed #416: Help-Text at the textarea for mail-forwarding

2007-07-12 Benedikt Heintel
	- SETUP:
		* Force of strikt administrator password
	- GUI:
		* Fixed #409: Increase the size of the textareas (Part II)
		* Fixed #475: Alias Forward domain shown and editable

2007-07-11 Raphael Geissert
	- ENGINE:
		* Fixed #477: unexpected token `fi' /var/www/ispcp/engine/tools/ispcpphptemp.sh: line 35
	- LANGUAGES
		* Converted slovak translation to plain file

2007-07-11 Benedikt Heintel
	- GUI:
		* Fixed #409: Increase the size of the textareas

2007-07-10 Raphael Geissert
	- GUI:
		* Fixed #473: Undefined variable: cfg in /var/www/ispcp/gui/include/vfs.php on line 111
	- SETUP:
		* ispcp-uninstall now removes some files that were being left

2007-07-09 Raphael Geissert
	- SETUP:
		* Fixed #472: error in fastcgi_ispcp.load

2007-07-08 Raphael Geissert
	- SETUP:
		* Fixed #459: Apache2 doesn't start after setup
	- GUI:
		* Fixed #470: typos in translations

2007-07-06 Raphael Geissert
	- GUI:
		* Fixed #468: translation's messages order
		* Merged some proposed changes (from en_GB.po)